Fix [#34008]: Scaling Smoke Domain In Z-Axis Crashes Blender

Also as minor change skip base_res update on domain step if adaptive domain isn't enabled.